# lightcycle

./: .gitignore  AGENTS.md  BACKLOG.md  CLAUDE.md  DEVELOPING.md  METHODOLOGY.md  README.md  USAGE.md  bd-issues-snapshot.jsonl  driver.md  pyproject.toml
.beads/: metadata.json
.github/workflows/: ci.yml  version-bump.yml
agents/: cleanup.md  coder.md  driver.md  open-pr.md  pr-watcher.md  ready-merge.md  reviewer.md  watch-pr.md
backups/: bd-export-pre-sqlite-migration.jsonl
config/: models.json
docs/: README.md  architecture.md  data-model.md  flow-v2.md  installation-and-config.md  ontology.md  state-lifecycle.md
flows/: feature.tsv
grid/: __init__.py  cli.py
grid/adapters/: __init__.py  fsio.py  gitio.py  spawner.py  store.py  workers.py
grid/core/: __init__.py  agents.py  config.py  contracts.py  flow.py  tasks.py  workspace.py
lightcycle/: banner.py  banner.txt  cli.py  config.py  container.py  render.py
lightcycle/adapters/: backup.py  breaker.py  frontmatter.py  fsio.py  github.py  gitio.py  lock.py  simulate.py  spawner.py  sqlite_store.py  worker_session.py  workers.py  workflow_source.py
lightcycle/domain/: audit.py
lightcycle/ports/: __init__.py  backup.py  breaker.py  fs.py  git.py  github.py  lock.py  store.py  workers.py  workflow_source.py
lightcycle/prompts/: driver.md
specs/: SPEC-TEMPLATE.md
steps/: auditor.md  cleanup.md  coder.md  develop.md  open-pr.md  plan-format.md  planner.md  ready-merge.md  resolve.md  review-plan.md  reviewer.md  watch-pr.md
tests/: conftest.py  fake_fs.py  fake_store.py  run.sh  store_contract.py  test_smoke.py  test_store_contract.py  test_tg.py
tests/feature/: feedback-cycle.feature  pipeline.feature  test_feedback_cycle.py  test_pipeline.py
tests/integration/: test_atomic_transitions_concurrency.py  test_cli_primitives.py  test_git_adapter.py  test_grid_home_overrides.py  test_init_project.py  test_lc.py  test_migrate_cmd.py  test_project_config.py  test_project_registry.py  test_restore.py  test_smoke.py  test_store_contract.py  (+9 more)
the_grid/: cli.py  config.py  container.py  logrender.py
workflows/: standard.md
(+398 files in other folders)
