[project]
name = "the-grid"
version = "0.1.0"
description = "An agent-pipeline engine: tg fronts a beads-backed pipeline of ephemeral claude workers."
requires-python = ">=3.11"
# Runtime: ZERO third-party dependencies. The shipped engine imports stdlib only.
dependencies = []

# Dev/test tooling only - never shipped, never imported by the engine.
[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-bdd>=7",
]

[tool.uv]
# Virtual project: uv manages the dev venv but does not build/install the engine
# itself (it is found via pythonpath below), so there is no build backend to own.
package = false

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "--import-mode=importlib"
testpaths = ["tests"]
python_files = ["test_*.py"]
