[project]
name = "lightcycle"
version = "0.1.0"
description = "A workflow-agnostic agent-pipeline engine: lc fronts a pipeline of ephemeral claude workers."
requires-python = ">=3.11"
# Runtime: ZERO third-party dependencies. The shipped engine imports stdlib only.
dependencies = []

[project.scripts]
lc = "lightcycle.cli:main"
lightcycle = "lightcycle.cli:main"

# Build backend is build-time tooling (like uv/pytest), never imported by the engine.
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Ship the whole package, including the default library (steps/workflows/driver.md).
[tool.hatch.build.targets.wheel]
packages = ["lightcycle"]

# Dev/test tooling only - never shipped, never imported by the engine.
[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-bdd>=7",
    "ruff>=0.9",
]

[tool.uv]
# uv manages the dev venv; the engine is found via pythonpath below for tests.
# pipx/pip build+install it as a real package via the build-system above.
package = false

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F"]
ignore = ["E501", "E741", "E702", "E402"]

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "--import-mode=importlib"
testpaths = ["tests"]
python_files = ["test_*.py"]
